# chat-gateway

./: .env.example  Cargo.toml  Dockerfile  Readme  docker-compose.yml
application/: Cargo.toml
application/src/: chat.rs
application/tests/: integration_test.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/events/: chat_consumer.rs  consumer.rs  mod.rs  producer.rs
domain/src/usecases/: chat.rs
domain/src/utils/: error.rs
domain/tests/: integration_test.rs
infrastructure/: Cargo.toml
infrastructure/src/: actor_test.rs  lib.rs  main.rs
infrastructure/src/kafka/: consumer.rs  kafka_consumer.rs  mod.rs  producer.rs
infrastructure/src/websocket/: handler.rs  init.rs  messages.rs  mod.rs  server.rs  session.rs
