[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rdkafka.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
uuid.workspace = true